Final primer formulario

--- a/Formulario Basico/formulario.html
+++ b/Formulario Basico/formulario.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario animado</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <form action="" class="formulario">
@@ -19,6 +20,8 @@
         <label for="" class="formulario_label">Teléfono</label>
         <input type="text" class="formulario_input">
         <label for="" class="formulario_label">Mensaje</label>
+        <input type="submit" class="formulario_submit">
+        <script src="form.js"></script>
     </form>
 </body>
 </html>
