Cabecera y menú hechos en html

--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -10,18 +10,34 @@
 <body>
     <header class="main-header">
         <div class="container container--flex">
-            <div class="logo-container">
+            <p class="logo-container column column--50">
                 <div class="h1 logo">Your Restaurant</div>
-            </div>
-            <div class="main-header__contactInfo">
+            </p>
+            <p class="main-header__contactInfo column column--50">
                 <div class="main-header__contactInfo__phone">
                     <span class="icon-phone">123 456 789</span>
                 </div>
                 <div class="main-header__contactInfo__address">
-                    <span class="icon-location">c/ Mi Restaurante, 123</span>
+                    <span class="icon-location">c/ Mi Restaurante, 123 - Cepillo</span>
                 </div>
-            </div>
+            </p>
         </div>
     </header>
+    <nav class="main-nav">
+        <div class="container container--flex">
+            <span class="icon-menu" id="btnmenu"></span>
+            <ul class="menu" id="menu">
+                <li class="menu__item"><a href="/" class="menu__link menu_link--select">Inicio</a></li>
+                <li class="menu__item"><a href="nosotros.html" class="menu__link">Sobre nosotros</a></li>
+                <li class="menu__item"><a href="galeria.html" class="menu__link">Galería</a></li>
+                <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+            </ul>
+            <div class="social-icon">
+                <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
+                <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
+                <a href="" class="social-icon__link"><span class="icon-mail"></span></a>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
