Imagen y texto de inicio

--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -39,5 +39,11 @@
             </div>
         </div>
     </nav>
+
+    <section class="banner">
+        <img src="img/principal.jpg" alt="" class="banner__img">
+        <div class="banner__content">Descubre el paraíso de las hamburguesas</div>
+    </section>
+
 </body>
 </html>
