--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -45,5 +45,86 @@
         <div class="banner__content">Descubre el paraíso de las hamburguesas</div>
     </section>
 
+    <main class="main">
+        <section class="group group--color">
+            <div class="container">
+                <h2 class="main__title">Bienvenido a su restaurante</h2>
+                <p class="main__txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia expedita 
+                    laudantium iure molestias nisi exercitationem quasi voluptate totam! Mollitia 
+                    quo officia non velit, fugit ipsum nemo iure. Esse, mollitia. Non.
+                </p>
+            </div>
+        </section>
+
+        <section class="group main__about__description">
+            <div class="container container--flex">
+                <div class="column column--50">
+                    <img src="img/img1.jpg" alt="">
+                </div>
+                <div class="column column--50">
+                    <h3 class="column__title">Especial brasileña</h3>
+                    <p class="column__txt">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Accusamus veritatis quod porro perspiciatis saepe unde tenetur, 
+                        doloremque aliquid rem beatae eum, et at deleniti obcaecati nemo ipsam voluptatibus, est sint!
+                    </p>
+                    <a href="" class="btn btn--contact">Contacto</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="group today-special">
+            <h2 class="today-special__title">Especial del día</h2>
+            <div class="container container__flex">
+                <div class="column column--50-25">
+                    <img src="img/img1.jpg" alt="" class="today-special__img">
+                    <div class="today-special__title">Burguer 1</div>
+                    <div class="today-special__price">10 €</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/img1.jpg" alt="" class="today-special__img">
+                    <div class="today-special__title">Burguer 2</div>
+                    <div class="today-special__price">12 €</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/img1.jpg" alt="" class="today-special__img">
+                    <div class="today-special__title">Burguer 3</div>
+                    <div class="today-special__price">12 €</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/img1.jpg" alt="" class="today-special__img">
+                    <div class="today-special__title">Burguer 4</div>
+                    <div class="today-special__price"> 15 €</div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="main-footer">
+            <div class="container container--flex">
+                <div class="column column-33">
+                    <h2 class="column__title">¿Por qué visitarnos?</h2>
+                    <p class="column__txt">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Labore repudiandae nihil sit corrupti impedit adipisci harum ut temporibus 
+                        iusto fugit! Amet dignissimos voluptate ullam ex nesciunt assumenda deserunt enim eius!
+                    </p>
+                </div>
+                <div class="column column-33">
+                    <h2 class="column__title">Contáctanos</h2>
+                    <p class="column__txt">c/ Mi Restaurante, 123 - Cepillo</p>
+                    <p class="column__txt">Teléfono: 123 456 789</p>
+                    <p class="column__txt">contacto@mirestaurante.com</p>
+                </div>
+                <div class="column column-33">
+                    <h2 class="column__title">Síguenos en redes</h2>
+                    <p class="column__txt"><a href="" class="icon-facebook"></a></p>
+                    <p class="column__txt"><a href="" class="icon-twitter"></a></p>
+                </div>
+            </div>
+        </footer>
+
+    </main>
+
 </body>
 </html>
