--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -100,31 +100,32 @@
             </div>
         </section>
 
-        <footer class="main-footer">
-            <div class="container container--flex">
-                <div class="column column-33">
-                    <h2 class="column__title">¿Por qué visitarnos?</h2>
-                    <p class="column__txt">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Labore repudiandae nihil sit corrupti impedit adipisci harum ut temporibus 
-                        iusto fugit! Amet dignissimos voluptate ullam ex nesciunt assumenda deserunt enim eius!
-                    </p>
-                </div>
-                <div class="column column-33">
-                    <h2 class="column__title">Contáctanos</h2>
-                    <p class="column__txt">c/ Mi Restaurante, 123 - Cepillo</p>
-                    <p class="column__txt">Teléfono: 123 456 789</p>
-                    <p class="column__txt">contacto@mirestaurante.com</p>
-                </div>
-                <div class="column column-33">
-                    <h2 class="column__title">Síguenos en redes</h2>
-                    <p class="column__txt"><a href="" class="icon-facebook"></a></p>
-                    <p class="column__txt"><a href="" class="icon-twitter"></a></p>
-                </div>
-            </div>
-        </footer>
-
     </main>
+
+    <footer class="main-footer">
+        <div class="container container--flex">
+            <div class="column column--33">
+                <h2 class="column__title">¿Por qué visitarnos?</h2>
+                <p class="column__txt">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Labore repudiandae nihil sit corrupti impedit adipisci harum ut temporibus 
+                    iusto fugit! Amet dignissimos voluptate ullam ex nesciunt assumenda deserunt enim eius!
+                </p>
+            </div>
+            <div class="column column--33">
+                <h2 class="column__title">Contáctanos</h2>
+                <p class="column__txt">c/ Mi Restaurante, 123 - Cepillo</p>
+                <p class="column__txt">Teléfono: 123 456 789</p>
+                <p class="column__txt">contacto@mirestaurante.com</p>
+            </div>
+            <div class="column column--33">
+                <h2 class="column__title">Síguenos en redes</h2>
+                <p class="column__txt"><a href="" class="icon-facebook">Facebook</a></p>
+                <p class="column__txt"><a href="" class="icon-twitter"></a>Síguenos en Twitter</p>
+            </div>
+            <p class="copy">2023 Mi Restaurante | Todos los derechos reservados</p>
+        </div>
+    </footer>
 
 </body>
 </html>
