--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -27,7 +27,7 @@
         <div class="container container--flex">
             <span class="icon-menu" id="btnmenu"></span>
             <ul class="menu" id="menu">
-                <li class="menu__item"><a href="/" class="menu__link menu_link--select">Inicio</a></li>
+                <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inicio</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Sobre nosotros</a></li>
                 <li class="menu__item"><a href="galeria.html" class="menu__link">Galería</a></li>
                 <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
