--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -10,17 +10,17 @@
 <body>
     <header class="main-header">
         <div class="container container--flex">
-            <p class="logo-container column column--50">
-                <div class="h1 logo">Your Restaurant</div>
-            </p>
-            <p class="main-header__contactInfo column column--50">
-                <div class="main-header__contactInfo__phone">
+            <div class="logo-container column column--50">
+                <h1 class="logo">Your Restaurant</h1>
+            </div>
+            <div class="main-header__contactInfo column column--50">
+                <p class="main-header__contactInfo__phone">
                     <span class="icon-phone">123 456 789</span>
-                </div>
-                <div class="main-header__contactInfo__address">
+                </p>
+                <p class="main-header__contactInfo__address">
                     <span class="icon-location">c/ Mi Restaurante, 123 - Cepillo</span>
-                </div>
-            </p>
+                </p>
+            </div>
         </div>
     </header>
     <nav class="main-nav">
@@ -102,7 +102,7 @@
 
     </main>
 
-        <footer class="main-footer">
+    <footer class="main-footer">
             <div class="container container--flex">
                 <div class="column column--33">
                     <h2 class="column__title">¿Por qué visitarnos?</h2>
@@ -125,7 +125,7 @@
                 </div>
                 <p class="copy">2023 Mi Restaurante | Todos los derechos reservados</p>
             </div>
-        </footer>
-
+    </footer>
+    <script src="js/menu.js"></script>
 </body>
 </html>
