Aplicados estilos index.html version movil

--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -75,7 +75,7 @@
         </section>
 
         <section class="group today-special">
-            <h2 class="today-special__title">Especial del día</h2>
+            <h2 class="group__title">Especial del día</h2>
             <div class="container container__flex">
                 <div class="column column--50-25">
                     <img src="img/img1.jpg" alt="" class="today-special__img">
