--- a/Web Restaurante/index.html
+++ b/Web Restaurante/index.html
@@ -76,7 +76,7 @@
 
         <section class="group today-special">
             <h2 class="group__title">Especial del día</h2>
-            <div class="container container__flex">
+            <div class="container container--flex">
                 <div class="column column--50-25">
                     <img src="img/img1.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Burguer 1</div>
